rtpj2k: update documentation

https://bugzilla.gnome.org/show_bug.cgi?id=745187